tests/compile_fail/include/invalid_attempts/mres_config.h
#ifndef MRES_CONFIG_H
#define MRES_CONFIG_H

#define MRES_CONFIG_ABI_REVISION 1
#define MRES_CONFIG_BUILD_ID 0x4D523031u
#define MRES_ENABLE_JITTER 1
#define MRES_MAX_ATTEMPTS 0

#endif
